gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail23822.d
version https://git-lfs.github.com/spec/v1
oid sha256:bdf83ff52876fba3f465d3c0a825ec049cbea41775ffd0e8344e672c714b988c
size 306
